В работу с SD-картой добавлена функция чтения файла кусками, что бы иметь возможность считывать достаточно большие файлы
Добавлен драйвер работы с дисплеем ILI9225
И подготовлено все что бы выводить картинку с сд карты на дисплей.
Сейчас поддерживается вывод bmp(24bit) картинки. Для этого нужно загрузить картинку размером 220 на  176 на SD карту.

И вызвать функцию file_read("FILE_NAME.bmp", BUFFER_FOR_READ_PICTURE, BUF_READ_PICTURE_LENGTH);

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -24,7 +24,8 @@
         "typeinfo": "c",
         "ili9225.h": "c",
         "timer.h": "c",
-        "spi.h": "c"
+        "spi.h": "c",
+        "ili9225_colours.h": "c"
     },
     "cortex-debug.variableUseNaturalFormat": false,
     "C_Cpp.errorSquiggles": "enabled"
